Add importDB function
