# internal/api/maintenance.go
@@ -3,7 +3,9 @@ package api
 import (
 	"encoding/json"
 	"fmt"
+	"io"
 	"io/ioutil"
+	"mime/multipart"
 	"net/http"
 	"os"
 	"os/exec"
@@ -570,4 +572,118 @@ func (api *API) exportDBStart(w http.ResponseWriter, req *http.Request) {
 		// api.exportDBStatus = ""
 		http.ServeFile(w, req, api.exportDBPath)
 	}
+}
+
+func (api *API) importDBStart(w http.ResponseWriter, r *http.Request) {
+	if api.hasAccessMode(w, r, []string{duser.PriviledgeAdmin, duser.PriviledgeMaintainer}) != nil {
+		api.sendError(w, APIErrorUnauthorized, "Unauthorized Access", http.StatusUnauthorized)
+		return
+	}
+
+	var p *multipart.Part
+	var err error
+
+	mr, err := r.MultipartReader()
+	if err != nil {
+		rlog.Error("Hit error while opening multipart reader: ", err.Error())
+		api.sendError(w, APIErrorBodyParsing, "Error while fetching file", http.StatusInternalServerError)
+		return
+	}
+
+	chunk := make([]byte, 10485760) // 10M size byte slice
+	tempFile, err := ioutil.TempFile(api.dataPath, "temp-file")
+	if err != nil {
+		rlog.Error("Hit error while creating temp file: ", err.Error())
+		api.sendError(w, APIErrorBodyParsing, "Error while fetching file", http.StatusInternalServerError)
+		return
+	}
+
+	err = os.Chmod(tempFile.Name(), 0644)
+	if err != nil {
+		rlog.Error("Hit error while creating temp file: ", err.Error())
+		api.sendError(w, APIErrorBodyParsing, "Error while fetching file", http.StatusInternalServerError)
+		return
+	}
+	newFilename := ""
+
+	// continue looping through all parts, *multipart.Reader.NextPart() will
+	// return an End of File when all parts have been read.
+	for {
+		api.importDBStatus = "running"
+		p, err = mr.NextPart()
+		if err == io.EOF {
+			// err is io.EOF, files upload completes.
+			tempFile.Close()
+			rlog.Info("Hit last part of multipart upload / do post treatment")
+			go func(filename string) {
+				rlog.Info("Rename " + tempFile.Name() + " into " + newFilename)
+				err = os.Rename(tempFile.Name(), newFilename)
+				if err != nil {
+					rlog.Error("Cannot parse command ", err.Error())
+					os.Remove(tempFile.Name())
+					api.importDBStatus = "failure"
+					return
+				}
+				cmd := exec.Command("rethinkdb", "restore", newFilename, "--force")
+				out, err := cmd.CombinedOutput()
+				if err != nil {
+					rlog.Error("rethinkdb restore failed with status " + err.Error() + " : " + string(out))
+					api.importDBStatus = "failure"
+					return
+				}
+				api.importDBStatus = "success"
+
+			}(tempFile.Name())
+			w.WriteHeader(http.StatusOK)
+			w.Write([]byte("{}"))
+			break
+		}
+		if err != nil {
+			// A normal error occurred
+			api.importDBStatus = "failure"
+			tempFile.Close()
+			os.Remove(tempFile.Name())
+			rlog.Error("Hit error while fetching next part: ", err.Error())
+			api.sendError(w, APIErrorBodyParsing, "Error while fetching file", http.StatusInternalServerError)
+			return
+		}
+
+		newFilename = api.dataPath + "/" + p.FileName()
+		rlog.Info("Uploaded filename: " + newFilename)
+		uploaded := false
+
+		// continue reading the part stream of this loop until either done or err.
+		for !uploaded {
+			n, err := p.Read(chunk)
+			if err != nil {
+				if err != io.EOF {
+					api.importDBStatus = "failure"
+					rlog.Error("Hit error while writing chunk: ", err.Error())
+					api.sendError(w, APIErrorBodyParsing, "Error while fetching file", http.StatusInternalServerError)
+					return
+				}
+				uploaded = true
+			}
+			if _, err = tempFile.Write(chunk[:n]); err != nil {
+				api.importDBStatus = "failure"
+				rlog.Error("Hit error while writing chunk: ", err.Error())
+				api.sendError(w, APIErrorBodyParsing, "Error while fetching file", http.StatusInternalServerError)
+				return
+			}
+		}
+	}
+}
+
+func (api *API) uploadDBStatus(w http.ResponseWriter, r *http.Request) {
+	if api.hasAccessMode(w, r, []string{duser.PriviledgeAdmin, duser.PriviledgeMaintainer}) != nil {
+		api.sendError(w, APIErrorUnauthorized, "Unauthorized Access", http.StatusUnauthorized)
+		return
+	}
+	m := make(map[string]string)
+	if api.importDBStatus != "" {
+		m["status"] = api.importDBStatus
+	} else {
+		m["status"] = "none"
+	}
+	json.NewEncoder(w).Encode(m)
 }
